--- a/telegram.html
+++ b/telegram.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;1,300&family=Staatliches&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&family=Staatliches&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
   <title>Dr. Zebiniso Yadgarova</title>
 </head>
@@ -17,13 +17,13 @@
     <div class="hidden 1100px:flex gap-[8px] 800px:gap-[16px] 1200px:gap-[20px] leading-[1.3]">
       <div
         class="flex flex-col grow py-3 800px:py-[9.5px] text-center rounded-b-[16px] 800px:rounded-b-[20px] 1200:rounded-b-[28px] shadow bg-[rgb(255,255,255)]">
-        <div class="text-[12px] 800px:text-[14px] 1200px:text-[18px] font-[300]">14-15-mart</div>
-        <div class="text-[20px] 800px:text-[28px] 1200px:text-[36px] font-bebas text-[#00971C]">20:30</div>
+        <div class="text-[12px] 800px:text-[14px] 1200px:text-[18px] font-[300]">27-28-mart</div>
+        <div class="text-[20px] 800px:text-[28px] 1200px:text-[36px] font-staatliches text-[#00971C]">20:30</div>
       </div>
       <div
         class="flex flex-col grow py-3 800px:py-[9.5px] text-center rounded-b-[16px] 800px:rounded-b-[20px] 1200:rounded-b-[28px] shadow bg-[rgb(255,255,255)]">
         <div class="text-[12px] 800px:text-[14px] 1200px:text-[18px] font-[300]">Narxi</div>
-        <div class="text-[20px] 800px:text-[28px] 1200px:text-[36px] font-bebas text-[#00971C]">BEPUL</div>
+        <div class="text-[20px] 800px:text-[28px] 1200px:text-[36px] font-staatliches text-[#00971C]">BEPUL</div>
       </div>
     </div>
 
@@ -36,10 +36,10 @@
             fill="#00971C"/>
         </svg>
 
-        <div class="text-[18px] 800px:text-[20px]">14-15-mart</div>
+        <div class="text-[18px] 800px:text-[20px]">27-28-mart</div>
       </div>
 
-      <div class="text-[24px] 800px:text-[28px] font-bebas text-[#00971C]">20:30</div>
+      <div class="text-[24px] 800px:text-[28px] font-staatliches text-[#00971C]">20:30</div>
     </div>
 
     <div
@@ -60,7 +60,7 @@
           fill="black"/>
       </svg>
 
-      <h1 class="text-[36px] 800px:text-[40px] 1200px:text-[60px] font-bebas leading-[1]">
+      <h1 class="text-[36px] 800px:text-[40px] 1200px:text-[60px] font-staatliches leading-[1]">
         Bepul darsda qatnashish uchun, yopiq telegram kanalimizga obuna bo'ling!
       </h1>
 
