--- a/a/index.html
+++ b/a/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&family=Staatliches&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="../css/styles.css">
   <title>Dr. Zebiniso Yadgarova</title>
 </head>
 <body class="main">
@@ -59,7 +59,7 @@
 
       <div class="flex flex-col 1100px:hidden">
         <div class="block w-[95%] mx-auto aspect-[614/480] relative">
-          <img class="w-full" src="img/mentor-dec@1x.png" srcset="img/mentor-dec@1x.png 1x, img/mentor-dec@2x.png 2x" alt="">
+          <img class="w-full" src="../img/mentor-dec@1x.png" srcset="../img/mentor-dec@1x.png 1x, ../img/mentor-dec@2x.png 2x" alt="">
         </div>
 
         <div class="flex flex-col gap-[12px] relative">
@@ -69,7 +69,7 @@
 
           <div class="flex items-center justify-center gap-[8px]">
             <div class="gift-container">
-              <img class="min-w-[50px] w-[50px] flex-shrink-[0] gift" src="img/gift.png" alt="">
+              <img class="min-w-[50px] w-[50px] flex-shrink-[0] gift" src="../img/gift.png" alt="">
             </div>
             <div class="text-[#000000CC] font-[300] text-[14px] w-4/5">Ro‘yxatdan o‘tganlarga “Bolaga suvni to‘g‘ri ichirish” darsligi sovg‘a</div>
           </div>
@@ -81,33 +81,33 @@
 
         <ul class="flex flex-col gap-[10px] 1200px:gap-[20px]">
           <li class="flex items-start gap-[12px]">
-            <img class="w-[24px] 800px:w-[28px] 1200px:w-[36px] shrink-0 aspect-square" src="img/check.png" alt="">
+            <img class="w-[24px] 800px:w-[28px] 1200px:w-[36px] shrink-0 aspect-square" src="../img/check.png" alt="">
 
             <p class="text-[14px] 800px:text-[16px] 1200px:text-[20px] font-[300] text-[#000000CC]">So‘dirgi va talvasaning <strong class="font-[500]">5 sababi hamda davolash</strong> usullari</p>
           </li>
           <li class="flex items-start gap-[12px]">
-            <img class="w-[24px] 800px:w-[28px] 1200px:w-[36px] shrink-0 aspect-square" src="img/check.png" alt="">
+            <img class="w-[24px] 800px:w-[28px] 1200px:w-[36px] shrink-0 aspect-square" src="../img/check.png" alt="">
 
             <p class="text-[14px] 800px:text-[16px] 1200px:text-[20px] font-[300] text-[#000000CC]">
               <strong class="font-[500]">Umurtqa qiyshayishi, oyoq shakli buzilishi va tish yemirilishini</strong> tabiiy davolash
             </p>
           </li>
           <li class="flex items-start gap-[12px]">
-            <img class="w-[24px] 800px:w-[28px] 1200px:w-[36px] shrink-0 aspect-square" src="img/check.png" alt="">
+            <img class="w-[24px] 800px:w-[28px] 1200px:w-[36px] shrink-0 aspect-square" src="../img/check.png" alt="">
 
             <p class="text-[14px] 800px:text-[16px] 1200px:text-[20px] font-[300] text-[#000000CC]">
               <strong class="font-[500]">Giperaktivlik</strong> belgilarini aniqlash (80% bolalarda uchraydi)
             </p>
           </li>
           <li class="flex items-start gap-[12px]">
-            <img class="w-[24px] 800px:w-[28px] 1200px:w-[36px] shrink-0 aspect-square" src="img/check.png" alt="">
+            <img class="w-[24px] 800px:w-[28px] 1200px:w-[36px] shrink-0 aspect-square" src="../img/check.png" alt="">
 
             <p class="text-[14px] 800px:text-[16px] 1200px:text-[20px] font-[300] text-[#000000CC]">
               <strong class="font-[500]">Jismoniy va aqliy</strong> rivojlanishdagi kechikishni oldini olish bo‘yicha maslahatlar
             </p>
           </li>
           <li class="flex items-start gap-[12px]">
-            <img class="w-[24px] 800px:w-[28px] 1200px:w-[36px] shrink-0 aspect-square" src="img/check.png" alt="">
+            <img class="w-[24px] 800px:w-[28px] 1200px:w-[36px] shrink-0 aspect-square" src="../img/check.png" alt="">
 
             <p class="text-[14px] 800px:text-[16px] 1200px:text-[20px] font-[300] text-[#000000CC]">
               To‘g‘ri ovqatlanish orqali <strong class="font-[500]">nevrologik kasalliklarni</strong> dorisiz uyda oldini olish va davolash
@@ -123,7 +123,7 @@
 
         <div class="flex items-center gap-[12px]">
           <div class="gift-container w-[70px] shrink-0">
-            <img class="w-full gift" src="img/gift.png" alt="">
+            <img class="w-full gift" src="../img/gift.png" alt="">
           </div>
           <div class="text-[14px] 800px:text-[16px] 1200px:text-[20px] font-[300] text-[#000000CC]">Ro‘yxatdan o‘tganlarga “Bolaga suvni to‘g‘ri ichirish” darsligi sovg‘a</div>
         </div>
@@ -165,12 +165,12 @@
       Yuborish
     </button>
 
-    <img data-modal-close class="w-[12px] 1100px:w-[16px] aspect-square absolute top-[24px] right-[24px] cursor-pointer" src="img/x.svg"
+    <img data-modal-close class="w-[12px] 1100px:w-[16px] aspect-square absolute top-[24px] right-[24px] cursor-pointer" src="../img/x.svg"
          alt="close icon">
   </form>
 </div>
 
-<script src="js/statistics.js"></script>
-<script src="js/script.js"></script>
+<script src="../js/statistics.js"></script>
+<script src="../js/script.js"></script>
 </body>
 </html>
