--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&family=Staatliches&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
   <title>Dr. Zebiniso Yadgarova</title>
+  <script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+      n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+      if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+      n.queue=[];t=b.createElement(e);t.async=!0;
+      t.src=v;s=b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t,s)}(window, document,'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '1012620460741923');
+    fbq('track', 'PageView');
+  </script>
+  <noscript><img height="1" width="1" style="display:none"
+                 src="https://www.facebook.com/tr?id=1012620460741923&ev=PageView&noscript=1"
+  /></noscript>
 </head>
 <body class="main">
 
