--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <li class="flex items-start gap-[12px]">
             <img class="w-[24px] 800px:w-[28px] 1200px:w-[36px] shrink-0 aspect-square" src="img/check.png" alt="">
 
-            <p class="text-[14px] 800px:text-[16px] 1200px:text-[20px] font-[300] text-[#000000CC]">So‘dirgi va talvasaning <strong class="font-[500]">5 sababi hamda davolash</strong> usullari</p>
+            <p class="text-[14px] 800px:text-[16px] 1200px:text-[20px] font-[300] text-[#000000CC]">Sudorogi va talvasaning <strong class="font-[500]">5 sababi hamda davolash</strong> usullari</p>
           </li>
           <li class="flex items-start gap-[12px]">
             <img class="w-[24px] 800px:w-[28px] 1200px:w-[36px] shrink-0 aspect-square" src="img/check.png" alt="">
