--- a/index.html
+++ b/index.html
@@ -10,21 +10,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&family=Staatliches&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
   <title>Dr. Zebiniso Yadgarova</title>
-  <script>
-    !function(f,b,e,v,n,t,s)
-    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-      n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-      if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-      n.queue=[];t=b.createElement(e);t.async=!0;
-      t.src=v;s=b.getElementsByTagName(e)[0];
-      s.parentNode.insertBefore(t,s)}(window, document,'script',
-      'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '1012620460741923');
-    fbq('track', 'PageView');
-  </script>
-  <noscript><img height="1" width="1" style="display:none"
-                 src="https://www.facebook.com/tr?id=1012620460741923&ev=PageView&noscript=1"
-  /></noscript>
 </head>
 <body class="main">
 
@@ -65,11 +50,11 @@
 
     <div class="flex flex-col justify-center gap-[15px] 800px:gap-[20px] 1200px:gap-[30px] grow py-[30px]">
       <h1 class="text-[32px] 800px:text-[36px] 1200px:text-[56px] font-staatliches leading-[1] text-center 1100px:text-left uppercase">
-        Sog‘lom bola formulasi
+        SIRLI NEVROMASSAJ
       </h1>
 
       <div class="max-w-[700px] mx-auto border border-[#00AD00] text-[14px] 800px:text-[16px] 1200px:text-[18px] py-[8px] px-[12px] 800px:py-[12px] 800px:px-[16px] rounded-[8px] leading-[1.4] text-[#000000CC] rotate-[-1deg]">
-        Dorilarsiz, to‘g‘ri ovqatlanish bilan 0-10 yoshdagi bolalarda uchraydigan 5 ta xavfli nevrologik kasallikni uyda oldini olish va davolash
+        Hech qanday dorilarsiz, Nevromassaj texnikalari yordamida bolalarda uchraydigan 5 ta xavfli kasalliklarning oldini olish va davolash
       </div>
 
       <div class="flex flex-col 1100px:hidden">
@@ -98,34 +83,43 @@
           <li class="flex items-start gap-[12px]">
             <img class="w-[24px] 800px:w-[28px] 1200px:w-[36px] shrink-0 aspect-square" src="img/check.png" alt="">
 
-            <p class="text-[14px] 800px:text-[16px] 1200px:text-[20px] font-[300] text-[#000000CC]">Sudorogi va talvasaning <strong class="font-[500]">5 sababi hamda davolash</strong> usullari</p>
-          </li>
-          <li class="flex items-start gap-[12px]">
-            <img class="w-[24px] 800px:w-[28px] 1200px:w-[36px] shrink-0 aspect-square" src="img/check.png" alt="">
-
             <p class="text-[14px] 800px:text-[16px] 1200px:text-[20px] font-[300] text-[#000000CC]">
-              <strong class="font-[500]">Umurtqa qiyshayishi, oyoq shakli buzilishi va tish yemirilishini</strong> tabiiy davolash
+              Farzandingizning tengdoshlaridan ko‘ra nutqiy rivojlanishini yaxshilash usullari
             </p>
           </li>
           <li class="flex items-start gap-[12px]">
             <img class="w-[24px] 800px:w-[28px] 1200px:w-[36px] shrink-0 aspect-square" src="img/check.png" alt="">
 
             <p class="text-[14px] 800px:text-[16px] 1200px:text-[20px] font-[300] text-[#000000CC]">
-              <strong class="font-[500]">Giperaktivlik</strong> belgilarini aniqlash (80% bolalarda uchraydi)
+              Aqliy rivojlanishni tezlashtirish va zehn salohiyatini oshirish usullari
             </p>
           </li>
           <li class="flex items-start gap-[12px]">
             <img class="w-[24px] 800px:w-[28px] 1200px:w-[36px] shrink-0 aspect-square" src="img/check.png" alt="">
 
             <p class="text-[14px] 800px:text-[16px] 1200px:text-[20px] font-[300] text-[#000000CC]">
-              <strong class="font-[500]">Jismoniy va aqliy</strong> rivojlanishdagi kechikishni oldini olish bo‘yicha maslahatlar
+              Jismoniy rivojlanishda kechikishlarni bartaraf etish
             </p>
           </li>
           <li class="flex items-start gap-[12px]">
             <img class="w-[24px] 800px:w-[28px] 1200px:w-[36px] shrink-0 aspect-square" src="img/check.png" alt="">
 
             <p class="text-[14px] 800px:text-[16px] 1200px:text-[20px] font-[300] text-[#000000CC]">
-              To‘g‘ri ovqatlanish orqali <strong class="font-[500]">nevrologik kasalliklarni</strong> dorisiz uyda oldini olish va davolash
+              Gipertonusni maxsus nevro nuqtalar orqali yengil va samarali davolash
+            </p>
+          </li>
+          <li class="flex items-start gap-[12px]">
+            <img class="w-[24px] 800px:w-[28px] 1200px:w-[36px] shrink-0 aspect-square" src="img/check.png" alt="">
+
+            <p class="text-[14px] 800px:text-[16px] 1200px:text-[20px] font-[300] text-[#000000CC]">
+              Balerina pozasi (Oyoq uchida bosish) odatini to‘g‘irlash va davolash usullari
+            </p>
+          </li>
+          <li class="flex items-start gap-[12px]">
+            <img class="w-[24px] 800px:w-[28px] 1200px:w-[36px] shrink-0 aspect-square" src="img/check.png" alt="">
+
+            <p class="text-[14px] 800px:text-[16px] 1200px:text-[20px] font-[300] text-[#000000CC]">
+              Doktorlar ham aytmagan, bolalarda rivojlanishga ta'sir qiluvchi 11 ta sirli nuqta haqida batafsil ma'lumot
             </p>
           </li>
         </ul>
@@ -185,7 +179,6 @@
   </form>
 </div>
 
-<script src="js/statistics.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
