--- a/a/index.html
+++ b/a/index.html
@@ -33,7 +33,7 @@
     <div class="hidden 1100px:flex gap-[8px] 800px:gap-[16px] 1200px:gap-[20px] leading-[1.3]">
       <div
         class="flex flex-col grow py-3 800px:py-[9.5px] text-center rounded-b-[16px] 800px:rounded-b-[20px] 1200:rounded-b-[28px] shadow bg-[rgb(255,255,255)]">
-        <div class="text-[12px] 800px:text-[14px] 1200px:text-[18px] text-[#00000099]">27-28-mart</div>
+        <div class="text-[12px] 800px:text-[14px] 1200px:text-[18px] text-[#00000099]">21-avgust</div>
         <div class="text-[20px] 800px:text-[28px] 1200px:text-[36px] font-staatliches">20:30</div>
       </div>
       <div
@@ -57,7 +57,7 @@
           </defs>
         </svg>
 
-        <div class="text-[16px] 800px:text-[18px] text-[#00000099]">27-28-mart</div>
+        <div class="text-[16px] 800px:text-[18px] text-[#00000099]">21-avgust</div>
       </div>
 
       <div class="text-[24px] 800px:text-[28px] font-staatliches">20:30</div>
