--- a/telegram.html
+++ b/telegram.html
@@ -18,7 +18,7 @@
     <div class="hidden 1100px:flex gap-[8px] 800px:gap-[16px] 1200px:gap-[20px] leading-[1.3]">
       <div
         class="flex flex-col grow py-3 800px:py-[9.5px] text-center rounded-b-[16px] 800px:rounded-b-[20px] 1200:rounded-b-[28px] shadow bg-[rgb(255,255,255)]">
-        <div class="text-[12px] 800px:text-[14px] 1200px:text-[18px] text-[#00000099]">27-28-mart</div>
+        <div class="text-[12px] 800px:text-[14px] 1200px:text-[18px] text-[#00000099]">21-avgust</div>
         <div class="text-[20px] 800px:text-[28px] 1200px:text-[36px] font-staatliches">20:30</div>
       </div>
       <div
@@ -46,7 +46,7 @@
           </defs>
         </svg>
 
-        <div class="text-[16px] 800px:text-[18px] text-[#00000099]">27-28-mart</div>
+        <div class="text-[16px] 800px:text-[18px] text-[#00000099]">21-avgust</div>
       </div>
 
       <div class="text-[24px] 800px:text-[28px] font-staatliches">20:30</div>
@@ -143,7 +143,7 @@
       </svg>
 
       <div class="flex flex-col gap-[12px] w-full">
-        <button class="main-button w-full flex items-center justify-center gap-[20px]" id="joinToChannel">
+        <a class="main-button w-full flex items-center justify-center gap-[20px]" href="https://t.me/+jsM7X6BUW3M3OGFi">
           <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
               d="M37.3334 18.9912C37.3334 29.1164 29.1252 37.3246 19.0001 37.3246C8.87486 37.3246 0.666748 29.1164 0.666748 18.9912C0.666748 8.86601 8.87486 0.657898 19.0001 0.657898C29.1252 0.657898 37.3334 8.86601 37.3334 18.9912ZM19.6571 14.1924C17.8739 14.9341 14.31 16.4693 8.96551 18.7978C8.09763 19.1428 7.64302 19.4805 7.60162 19.8105C7.53168 20.3686 8.23037 20.5882 9.18181 20.8874C9.31123 20.9281 9.44533 20.9703 9.5828 21.015C10.5189 21.3192 11.778 21.6752 12.4326 21.6893C13.0264 21.7022 13.6892 21.4574 14.4208 20.9549C19.4144 17.5841 21.9921 15.8804 22.154 15.8438C22.2682 15.8177 22.4264 15.7853 22.5335 15.8804C22.6407 15.9758 22.6301 16.1562 22.6189 16.2046C22.5496 16.4997 19.8069 19.0495 18.3877 20.369C17.9644 20.7624 17.5519 21.1643 17.1361 21.565C16.2666 22.4032 15.6145 23.0319 17.1722 24.0586C18.7515 25.0993 20.3426 26.1379 21.8828 27.2359C22.6424 27.7775 23.3249 28.264 24.1679 28.1865C24.6579 28.1414 25.1639 27.6807 25.4208 26.3068C26.0282 23.0599 27.222 16.0251 27.4979 13.1261C27.5221 12.8721 27.4917 12.5471 27.4673 12.4044C27.4429 12.2617 27.3918 12.0584 27.2064 11.9079C26.9866 11.7296 26.6476 11.6921 26.496 11.6947C25.8063 11.7069 24.7485 12.0747 19.6571 14.1924Z"
@@ -151,7 +151,7 @@
           </svg>
 
           Obuna bo‘lish
-        </button>
+        </a>
 
         <div class="flex items-center gap-[12px]">
           <div class="gift-container w-[70px] shrink-0">
