--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&family=Staatliches&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&family=Staatliches&display=swap"
+        rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
   <title>Dr. Zebiniso Yadgarova</title>
 </head>
 <body class="main">
 
-<div class="wrapper">
+<div class="wrapper-b">
   <div class="1100px:w-1/2 flex flex-col min-h-screen">
-    <div class="hidden 1100px:flex gap-[8px] 800px:gap-[16px] 1200px:gap-[20px] leading-[1.3]">
+    <div class="hidden 1100px:flex gap-[8px] 800px:gap-[16px] 1200px:gap-[20px] leading-[1.3] mx-[10px]">
       <div
         class="flex flex-col grow py-3 800px:py-[9.5px] text-center rounded-b-[16px] 800px:rounded-b-[20px] 1200:rounded-b-[28px] shadow bg-[rgb(255,255,255)]">
         <div class="text-[12px] 800px:text-[14px] 1200px:text-[18px] text-[#00000099]">21-avgust</div>
@@ -29,11 +30,15 @@
     </div>
 
     <div
-      class="1100px:hidden flex justify-between px-[20px] py-[8px] text-center rounded-b-[16px] 800px:rounded-b-[20px] shadow bg-[rgb(255,255,255)]">
+      class="1100px:hidden flex justify-between px-[20px] py-[8px] text-center rounded-b-[16px] 800px:rounded-b-[20px] shadow bg-[rgb(255,255,255)] mx-[10px]">
       <div class="flex items-center gap-[10px]">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path fill-rule="evenodd" clip-rule="evenodd" d="M5.86181 2C6.37031 2 6.78255 2.40834 6.78255 2.91203V4.93994C10.254 4.63371 13.7461 4.63371 17.2175 4.93994V2.91203C17.2175 2.40834 17.6298 2 18.1383 2C18.6468 2 19.059 2.40834 19.059 2.91203V5.1209C20.8919 5.37761 22.34 6.81367 22.5851 8.64548L22.6914 9.4395C23.1382 12.7791 23.0997 16.165 22.5767 19.4939C22.3177 21.1428 20.9653 22.4095 19.2886 22.5731L17.824 22.7163C13.9508 23.0946 10.0493 23.0946 6.176 22.7163L4.71141 22.5731C3.03476 22.4095 1.68231 21.1428 1.42327 19.4939C0.900337 16.165 0.86174 12.7791 1.30865 9.4395L1.41491 8.64548C1.66004 6.81365 3.10811 5.37757 4.94108 5.12089V2.91203C4.94108 2.40834 5.35331 2 5.86181 2ZM6.40831 6.80677C10.1271 6.44352 13.8729 6.44352 17.5917 6.80677L18.7032 6.91537C19.7674 7.0193 20.6191 7.83523 20.7595 8.88516L20.8659 9.67918C20.9029 9.95657 20.9366 10.2343 20.9667 10.5123H3.03339C3.06345 10.2343 3.09703 9.95658 3.13415 9.67919L3.2404 8.88516C3.38091 7.83523 4.23267 7.0193 5.29674 6.91537L6.40831 6.80677ZM2.88701 12.3364C2.76648 14.6324 2.88523 16.9369 3.24283 19.2133C3.37277 20.0405 4.05114 20.6757 4.89213 20.7579L6.35672 20.901C10.1098 21.2676 13.8903 21.2676 17.6433 20.901L19.1079 20.7579C19.9488 20.6757 20.6272 20.0405 20.7572 19.2133C21.1148 16.9369 21.2335 14.6324 21.113 12.3364H2.88701Z" fill="black"/>
-          <path fill-rule="evenodd" clip-rule="evenodd" d="M5.86181 2C6.37031 2 6.78255 2.40834 6.78255 2.91203V4.93994C10.254 4.63371 13.7461 4.63371 17.2175 4.93994V2.91203C17.2175 2.40834 17.6298 2 18.1383 2C18.6468 2 19.059 2.40834 19.059 2.91203V5.1209C20.8919 5.37761 22.34 6.81367 22.5851 8.64548L22.6914 9.4395C23.1382 12.7791 23.0997 16.165 22.5767 19.4939C22.3177 21.1428 20.9653 22.4095 19.2886 22.5731L17.824 22.7163C13.9508 23.0946 10.0493 23.0946 6.176 22.7163L4.71141 22.5731C3.03476 22.4095 1.68231 21.1428 1.42327 19.4939C0.900337 16.165 0.86174 12.7791 1.30865 9.4395L1.41491 8.64548C1.66004 6.81365 3.10811 5.37757 4.94108 5.12089V2.91203C4.94108 2.40834 5.35331 2 5.86181 2ZM6.40831 6.80677C10.1271 6.44352 13.8729 6.44352 17.5917 6.80677L18.7032 6.91537C19.7674 7.0193 20.6191 7.83523 20.7595 8.88516L20.8659 9.67918C20.9029 9.95657 20.9366 10.2343 20.9667 10.5123H3.03339C3.06345 10.2343 3.09703 9.95658 3.13415 9.67919L3.2404 8.88516C3.38091 7.83523 4.23267 7.0193 5.29674 6.91537L6.40831 6.80677ZM2.88701 12.3364C2.76648 14.6324 2.88523 16.9369 3.24283 19.2133C3.37277 20.0405 4.05114 20.6757 4.89213 20.7579L6.35672 20.901C10.1098 21.2676 13.8903 21.2676 17.6433 20.901L19.1079 20.7579C19.9488 20.6757 20.6272 20.0405 20.7572 19.2133C21.1148 16.9369 21.2335 14.6324 21.113 12.3364H2.88701Z" fill="url(#paint0_linear_3_252)"/>
+          <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M5.86181 2C6.37031 2 6.78255 2.40834 6.78255 2.91203V4.93994C10.254 4.63371 13.7461 4.63371 17.2175 4.93994V2.91203C17.2175 2.40834 17.6298 2 18.1383 2C18.6468 2 19.059 2.40834 19.059 2.91203V5.1209C20.8919 5.37761 22.34 6.81367 22.5851 8.64548L22.6914 9.4395C23.1382 12.7791 23.0997 16.165 22.5767 19.4939C22.3177 21.1428 20.9653 22.4095 19.2886 22.5731L17.824 22.7163C13.9508 23.0946 10.0493 23.0946 6.176 22.7163L4.71141 22.5731C3.03476 22.4095 1.68231 21.1428 1.42327 19.4939C0.900337 16.165 0.86174 12.7791 1.30865 9.4395L1.41491 8.64548C1.66004 6.81365 3.10811 5.37757 4.94108 5.12089V2.91203C4.94108 2.40834 5.35331 2 5.86181 2ZM6.40831 6.80677C10.1271 6.44352 13.8729 6.44352 17.5917 6.80677L18.7032 6.91537C19.7674 7.0193 20.6191 7.83523 20.7595 8.88516L20.8659 9.67918C20.9029 9.95657 20.9366 10.2343 20.9667 10.5123H3.03339C3.06345 10.2343 3.09703 9.95658 3.13415 9.67919L3.2404 8.88516C3.38091 7.83523 4.23267 7.0193 5.29674 6.91537L6.40831 6.80677ZM2.88701 12.3364C2.76648 14.6324 2.88523 16.9369 3.24283 19.2133C3.37277 20.0405 4.05114 20.6757 4.89213 20.7579L6.35672 20.901C10.1098 21.2676 13.8903 21.2676 17.6433 20.901L19.1079 20.7579C19.9488 20.6757 20.6272 20.0405 20.7572 19.2133C21.1148 16.9369 21.2335 14.6324 21.113 12.3364H2.88701Z"
+                fill="black"/>
+          <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M5.86181 2C6.37031 2 6.78255 2.40834 6.78255 2.91203V4.93994C10.254 4.63371 13.7461 4.63371 17.2175 4.93994V2.91203C17.2175 2.40834 17.6298 2 18.1383 2C18.6468 2 19.059 2.40834 19.059 2.91203V5.1209C20.8919 5.37761 22.34 6.81367 22.5851 8.64548L22.6914 9.4395C23.1382 12.7791 23.0997 16.165 22.5767 19.4939C22.3177 21.1428 20.9653 22.4095 19.2886 22.5731L17.824 22.7163C13.9508 23.0946 10.0493 23.0946 6.176 22.7163L4.71141 22.5731C3.03476 22.4095 1.68231 21.1428 1.42327 19.4939C0.900337 16.165 0.86174 12.7791 1.30865 9.4395L1.41491 8.64548C1.66004 6.81365 3.10811 5.37757 4.94108 5.12089V2.91203C4.94108 2.40834 5.35331 2 5.86181 2ZM6.40831 6.80677C10.1271 6.44352 13.8729 6.44352 17.5917 6.80677L18.7032 6.91537C19.7674 7.0193 20.6191 7.83523 20.7595 8.88516L20.8659 9.67918C20.9029 9.95657 20.9366 10.2343 20.9667 10.5123H3.03339C3.06345 10.2343 3.09703 9.95658 3.13415 9.67919L3.2404 8.88516C3.38091 7.83523 4.23267 7.0193 5.29674 6.91537L6.40831 6.80677ZM2.88701 12.3364C2.76648 14.6324 2.88523 16.9369 3.24283 19.2133C3.37277 20.0405 4.05114 20.6757 4.89213 20.7579L6.35672 20.901C10.1098 21.2676 13.8903 21.2676 17.6433 20.901L19.1079 20.7579C19.9488 20.6757 20.6272 20.0405 20.7572 19.2133C21.1148 16.9369 21.2335 14.6324 21.113 12.3364H2.88701Z"
+                fill="url(#paint0_linear_3_252)"/>
           <defs>
             <linearGradient id="paint0_linear_3_252" x1="1" y1="12.5" x2="23" y2="12.5" gradientUnits="userSpaceOnUse">
               <stop stop-color="#00B430"/>
@@ -49,20 +54,73 @@
     </div>
 
     <div class="flex flex-col justify-center gap-[15px] 800px:gap-[20px] 1200px:gap-[30px] grow py-[30px]">
-      <h1 class="text-[32px] 800px:text-[36px] 1200px:text-[56px] font-staatliches leading-[1] text-center 1100px:text-left uppercase">
+      <h1
+        class="px-[10px] text-[32px] 800px:text-[36px] 1200px:text-[56px] font-staatliches leading-[1] text-center 1100px:text-left uppercase">
         SIRLI NEVROMASSAJ
       </h1>
 
-      <div class="max-w-[700px] mx-auto border border-[#00AD00] text-[14px] 800px:text-[16px] 1200px:text-[18px] py-[8px] px-[12px] 800px:py-[12px] 800px:px-[16px] rounded-[8px] leading-[1.4] text-[#000000CC] rotate-[-1deg]">
-        Hech qanday dorilarsiz, Nevromassaj texnikalari yordamida bolalarda uchraydigan 5 ta xavfli kasalliklarning oldini olish va davolash
+      <div class="px-[10px]">
+        <div
+          class="max-w-[700px] mx-auto border border-[#00AD00] text-[13px] 800px:text-[16px] 1200px:text-[18px] py-[8px] px-[12px] 800px:py-[12px] 800px:px-[16px] rounded-[8px] leading-[1.4] text-[#000000CC] rotate-[-1deg]">
+          Hech qanday dorilarsiz, Nevromassaj texnikalari yordamida bolalarda uchraydigan 5 ta xavfli kasalliklarning oldini olish va davolash
+        </div>
       </div>
 
-      <div class="flex flex-col 1100px:hidden">
-        <div class="block w-[95%] mx-auto aspect-[614/480] relative">
-          <img class="w-full" src="img/mentor-dec@1x.png" srcset="img/mentor-dec@1x.png 1x, img/mentor-dec@2x.png 2x" alt="">
+      <div class="flex flex-col gap-[12px] 1100px:hidden">
+        <div class="flex">
+          <div class="flex flex-col gap-[15px] 1200px:gap-[20px] px-[10px] flex-grow">
+            <h2
+              class="text-[18px] 800px:text-[22px] 1200px:text-[24px] font-[500] font-staatliches uppercase leading-[1.2]">
+              Vebinarda nimalarni o‘rganasiz:</h2>
+
+            <ul class="flex flex-col gap-[10px] 1200px:gap-[20px] leading-[1.2]">
+              <li class="flex items-start gap-[12px]">
+                <img class="w-[24px] 800px:w-[28px] 1200px:w-[36px] shrink-0 aspect-square" src="img/check.png"
+                     alt="">
+
+                <p class="text-[12px] 800px:text-[14px] 1200px:text-[16px] font-[300] text-[#000000CC]">
+                  Farzandingizning tengdoshlaridan ko‘ra nutqiy rivojlanishini yaxshilash usullari
+                </p>
+              </li>
+              <li class="flex items-start gap-[12px]">
+                <img class="w-[24px] 800px:w-[28px] 1200px:w-[36px] shrink-0 aspect-square" src="img/check.png"
+                     alt="">
+
+                <p class="text-[12px] 800px:text-[14px] 1200px:text-[16px] font-[300] text-[#000000CC]">
+                  Aqliy rivojlanishni tezlashtirish va zehn salohiyatini oshirish usullari
+                </p>
+              </li>
+              <li class="flex items-start gap-[12px]">
+                <img class="w-[24px] 800px:w-[28px] 1200px:w-[36px] shrink-0 aspect-square" src="img/check.png"
+                     alt="">
+
+                <p class="text-[12px] 800px:text-[14px] 1200px:text-[16px] font-[300] text-[#000000CC]">
+                  Jismoniy rivojlanishda kechikishlarni bartaraf etish
+                </p>
+              </li>
+              <li class="flex items-start gap-[12px]">
+                <img class="w-[24px] 800px:w-[28px] 1200px:w-[36px] shrink-0 aspect-square" src="img/check.png"
+                     alt="">
+
+                <p class="text-[12px] 800px:text-[14px] 1200px:text-[16px] font-[300] text-[#000000CC]">
+                  Balerina pozasi (Oyoq uchida bosish) odatini to‘g‘irlash va davolash usullari
+                </p>
+              </li>
+              <li class="flex items-start gap-[12px]">
+                <img class="w-[24px] 800px:w-[28px] 1200px:w-[36px] shrink-0 aspect-square" src="img/check.png"
+                     alt="">
+
+                <p class="text-[12px] 800px:text-[14px] 1200px:text-[16px] font-[300] text-[#000000CC]">
+                  Doktorlar ham aytmagan, bolalarda rivojlanishga ta'sir qiluvchi 11 ta sirli nuqta haqida batafsil ma'lumot
+                </p>
+              </li>
+            </ul>
+          </div>
+
+          <img class="h-full w-auto shrink-0" src="img/mentor@1x.png" srcset="img/mentor@1x.png 1x, img/mentor@2x.png 2x" alt="">
         </div>
 
-        <div class="flex flex-col gap-[12px] relative">
+        <div class="flex flex-col gap-[12px] relative px-[10px]">
           <button class="main-button relative z-[1]" data-main-button>
             Ro‘yxatdan o‘tish
           </button>
@@ -71,13 +129,17 @@
             <div class="gift-container">
               <img class="min-w-[50px] w-[50px] flex-shrink-[0] gift" src="img/gift.png" alt="">
             </div>
-            <div class="text-[#000000CC] font-[300] text-[14px] w-4/5">Ro‘yxatdan o‘tganlarga “Bolaga suvni to‘g‘ri ichirish” darsligi sovg‘a</div>
+            <div class="text-[#000000CC] font-[300] text-[14px] w-4/5">Ro‘yxatdan o‘tganlarga “Bolaga suvni to‘g‘ri
+              ichirish” darsligi sovg‘a
+            </div>
           </div>
         </div>
       </div>
 
-      <div class="flex flex-col gap-[15px] 1200px:gap-[20px]">
-        <h2 class="text-[24px] 800px:text-[28px] 1200px:text-[32px] font-[500] text-center 1100px:text-left font-staatliches uppercase">Vebinarda nimalarni o‘rganasiz:</h2>
+      <div class="hidden 1100px:flex flex-col gap-[15px] 1200px:gap-[20px] px-[10px]">
+        <h2
+          class="text-[24px] 800px:text-[28px] 1200px:text-[32px] font-[500] text-center 1100px:text-left font-staatliches uppercase">
+          Vebinarda nimalarni o‘rganasiz:</h2>
 
         <ul class="flex flex-col gap-[10px] 1200px:gap-[20px]">
           <li class="flex items-start gap-[12px]">
@@ -99,13 +161,6 @@
 
             <p class="text-[14px] 800px:text-[16px] 1200px:text-[20px] font-[300] text-[#000000CC]">
               Jismoniy rivojlanishda kechikishlarni bartaraf etish
-            </p>
-          </li>
-          <li class="flex items-start gap-[12px]">
-            <img class="w-[24px] 800px:w-[28px] 1200px:w-[36px] shrink-0 aspect-square" src="img/check.png" alt="">
-
-            <p class="text-[14px] 800px:text-[16px] 1200px:text-[20px] font-[300] text-[#000000CC]">
-              Gipertonusni maxsus nevro nuqtalar orqali yengil va samarali davolash
             </p>
           </li>
           <li class="flex items-start gap-[12px]">
@@ -134,35 +189,43 @@
           <div class="gift-container w-[70px] shrink-0">
             <img class="w-full gift" src="img/gift.png" alt="">
           </div>
-          <div class="text-[14px] 800px:text-[16px] 1200px:text-[20px] font-[300] text-[#000000CC]">Ro‘yxatdan o‘tganlarga “Bolaga suvni to‘g‘ri ichirish” darsligi sovg‘a</div>
+          <div class="text-[14px] 800px:text-[16px] 1200px:text-[20px] font-[300] text-[#000000CC]">Ro‘yxatdan
+            o‘tganlarga “Bolaga suvni to‘g‘ri ichirish” darsligi sovg‘a
+          </div>
         </div>
       </div>
     </div>
   </div>
 </div>
 
-<div class="fixed inset-[0] grid place-items-center overflow-[auto] z-[20] bg-[#0000004D] bg-opacity-[50] backdrop-blur-[5px] p-[8px] hidden"
-     data-modal-backdrop data-modal-close>
-  <form data-form class="w-full max-w-[520px] p-[20px] 800px:p-[40px] bg-[#fff] rounded-[8px] 1100px:rounded-[12px] relative">
+<div
+  class="fixed inset-[0] grid place-items-center overflow-[auto] z-[20] bg-[#0000004D] bg-opacity-[50] backdrop-blur-[5px] p-[8px] hidden"
+  data-modal-backdrop data-modal-close>
+  <form data-form
+        class="w-full max-w-[520px] p-[20px] 800px:p-[40px] bg-[#fff] rounded-[8px] 1100px:rounded-[12px] relative">
     <h2 class="text-[28px] [1100px]:text-[36px] font-staatliches leading-[1] mb-[16px]">
       BEPUL DARSDA ISHTIROK ETISH UCHUN RO‘YXATDAN O‘TING
     </h2>
 
-    <div class="p-[16px] mb-[8px] 1100px:mb-[16px] text-[#00971C] rounded-[16px] bg-[#00971C11] text-center hidden" data-form-alert>
+    <div class="p-[16px] mb-[8px] 1100px:mb-[16px] text-[#00971C] rounded-[16px] bg-[#00971C11] text-center hidden"
+         data-form-alert>
     </div>
 
     <label class="block w-full mb-[16px] 1100px:mb-[24px]">
       <span class="block mb-1.5 text-[#48635B]">Ism</span>
-      <input class="w-full h-[48px] px-[16px] rounded-[8px] 1100px:rounded-[12px] bg-[#F3F7F8] border border-[#bed4da]" id="name"
+      <input class="w-full h-[48px] px-[16px] rounded-[8px] 1100px:rounded-[12px] bg-[#F3F7F8] border border-[#bed4da]"
+             id="name"
              type="text" placeholder="Ismingizni kiriting" name="name">
     </label>
 
     <label class="block w-full mb-[24px] 1100px:mb-[32px]" for="phone">
       <span class="block mb-[6px[ text-[#48635B]">Telefon raqami</span>
 
-      <span class="flex h-[48px] rounded-[8px] 1100px:rounded-[12px] border border-[#bed4da] bg-[#F3F7F8] overflow-hidden">
-          <input class="bg-[transparent] border-none focus:outline-0 pl-[16px] w-[6ch] text-black text-[14px] 1100px:text-[16px]"
-                 type="text" readonly value="+998">
+      <span
+        class="flex h-[48px] rounded-[8px] 1100px:rounded-[12px] border border-[#bed4da] bg-[#F3F7F8] overflow-hidden">
+          <input
+            class="bg-[transparent] border-none focus:outline-0 pl-[16px] w-[6ch] text-black text-[14px] 1100px:text-[16px]"
+            type="text" readonly value="+998">
           <input class="grow bg-[transparent] border-none focus:outline-0 text-black text-[14px] 1100px:text-[16px]"
                  id="phone" type="tel" name="phone" maxlength="12">
         </span>
@@ -174,7 +237,8 @@
       Yuborish
     </button>
 
-    <img data-modal-close class="w-[12px] 1100px:w-[16px] aspect-square absolute top-[24px] right-[24px] cursor-pointer" src="img/x.svg"
+    <img data-modal-close class="w-[12px] 1100px:w-[16px] aspect-square absolute top-[24px] right-[24px] cursor-pointer"
+         src="img/x.svg"
          alt="close icon">
   </form>
 </div>
