--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                      alt="">
 
                 <p class="text-[12px] 800px:text-[14px] 1200px:text-[16px] font-[300] text-[#000000CC]">
-                  Farzandingizning tengdoshlaridan ko‘ra nutqiy rivojlanishini yaxshilash usullari
+                  <span class="font-[500]">Farzandingizning tengdoshlaridan ko‘ra nutqiy rivojlanishini yaxshilash</span> usullari
                 </p>
               </li>
               <li class="flex items-start gap-[12px]">
@@ -87,7 +87,7 @@
                      alt="">
 
                 <p class="text-[12px] 800px:text-[14px] 1200px:text-[16px] font-[300] text-[#000000CC]">
-                  Aqliy rivojlanishni tezlashtirish va zehn salohiyatini oshirish usullari
+                  <span class="font-[500]">Aqliy rivojlanishni tezlashtirish va zehn salohiyatini oshirish</span> usullari
                 </p>
               </li>
               <li class="flex items-start gap-[12px]">
@@ -95,7 +95,7 @@
                      alt="">
 
                 <p class="text-[12px] 800px:text-[14px] 1200px:text-[16px] font-[300] text-[#000000CC]">
-                  Jismoniy rivojlanishda kechikishlarni bartaraf etish
+                  Jismoniy <span class="font-[500]">rivojlanishda kechikishlarni bartaraf etish</span>
                 </p>
               </li>
               <li class="flex items-start gap-[12px]">
@@ -103,7 +103,7 @@
                      alt="">
 
                 <p class="text-[12px] 800px:text-[14px] 1200px:text-[16px] font-[300] text-[#000000CC]">
-                  Balerina pozasi (Oyoq uchida bosish) odatini to‘g‘irlash va davolash usullari
+                  <span class="font-[500]">Balerina pozasi</span> (Oyoq uchida bosish) <span class="font-[500]">odatini to‘g‘irlash va davolash</span> usullari
                 </p>
               </li>
               <li class="flex items-start gap-[12px]">
@@ -111,7 +111,7 @@
                      alt="">
 
                 <p class="text-[12px] 800px:text-[14px] 1200px:text-[16px] font-[300] text-[#000000CC]">
-                  Doktorlar ham aytmagan, bolalarda rivojlanishga ta'sir qiluvchi 11 ta sirli nuqta haqida batafsil ma'lumot
+                  <span class="font-[500]">Doktorlar</span> ham <span class="font-[500]">aytmagan, bolalarda rivojlanishga ta'sir qiluvchi 11 ta sirli nuqta</span> haqida batafsil ma'lumot
                 </p>
               </li>
             </ul>
@@ -146,35 +146,35 @@
             <img class="w-[24px] 800px:w-[28px] 1200px:w-[36px] shrink-0 aspect-square" src="img/check.png" alt="">
 
             <p class="text-[14px] 800px:text-[16px] 1200px:text-[20px] font-[300] text-[#000000CC]">
-              Farzandingizning tengdoshlaridan ko‘ra nutqiy rivojlanishini yaxshilash usullari
+              <span class="font-[500]">Farzandingizning tengdoshlaridan ko‘ra nutqiy rivojlanishini yaxshilash</span> usullari
             </p>
           </li>
           <li class="flex items-start gap-[12px]">
             <img class="w-[24px] 800px:w-[28px] 1200px:w-[36px] shrink-0 aspect-square" src="img/check.png" alt="">
 
             <p class="text-[14px] 800px:text-[16px] 1200px:text-[20px] font-[300] text-[#000000CC]">
-              Aqliy rivojlanishni tezlashtirish va zehn salohiyatini oshirish usullari
+              <span class="font-[500]">Aqliy rivojlanishni tezlashtirish va zehn salohiyatini oshirish</span> usullari
             </p>
           </li>
           <li class="flex items-start gap-[12px]">
             <img class="w-[24px] 800px:w-[28px] 1200px:w-[36px] shrink-0 aspect-square" src="img/check.png" alt="">
 
             <p class="text-[14px] 800px:text-[16px] 1200px:text-[20px] font-[300] text-[#000000CC]">
-              Jismoniy rivojlanishda kechikishlarni bartaraf etish
+              Jismoniy <span class="font-[500]">rivojlanishda kechikishlarni bartaraf etish</span>
             </p>
           </li>
           <li class="flex items-start gap-[12px]">
             <img class="w-[24px] 800px:w-[28px] 1200px:w-[36px] shrink-0 aspect-square" src="img/check.png" alt="">
 
             <p class="text-[14px] 800px:text-[16px] 1200px:text-[20px] font-[300] text-[#000000CC]">
-              Balerina pozasi (Oyoq uchida bosish) odatini to‘g‘irlash va davolash usullari
+              <span class="font-[500]">Balerina pozasi</span> (Oyoq uchida bosish) <span class="font-[500]">odatini to‘g‘irlash va davolash</span> usullari
             </p>
           </li>
           <li class="flex items-start gap-[12px]">
             <img class="w-[24px] 800px:w-[28px] 1200px:w-[36px] shrink-0 aspect-square" src="img/check.png" alt="">
 
             <p class="text-[14px] 800px:text-[16px] 1200px:text-[20px] font-[300] text-[#000000CC]">
-              Doktorlar ham aytmagan, bolalarda rivojlanishga ta'sir qiluvchi 11 ta sirli nuqta haqida batafsil ma'lumot
+              <span class="font-[500]">Doktorlar</span> ham <span class="font-[500]">aytmagan, bolalarda rivojlanishga ta'sir qiluvchi 11 ta sirli nuqta</span> haqida batafsil ma'lumot
             </p>
           </li>
         </ul>
