--- a/a/index.html
+++ b/a/index.html
@@ -34,12 +34,12 @@
       <div
         class="flex flex-col grow py-3 800px:py-[9.5px] text-center rounded-b-[16px] 800px:rounded-b-[20px] 1200:rounded-b-[28px] shadow bg-[rgb(255,255,255)]">
         <div class="text-[12px] 800px:text-[14px] 1200px:text-[18px] text-[#00000099]">21-avgust</div>
-        <div class="text-[20px] 800px:text-[28px] 1200px:text-[36px] font-staatliches">20:30</div>
+        <div class="text-[20px] 800px:text-[28px] 1200px:text-[36px]">20:30</div>
       </div>
       <div
         class="flex flex-col grow py-3 800px:py-[9.5px] text-center rounded-b-[16px] 800px:rounded-b-[20px] 1200:rounded-b-[28px] shadow bg-[rgb(255,255,255)] opacity-0">
         <div class="text-[12px] 800px:text-[14px] 1200px:text-[18px] font-[300]">Narxi</div>
-        <div class="text-[20px] 800px:text-[28px] 1200px:text-[36px] font-staatliches">BEPUL</div>
+        <div class="text-[20px] 800px:text-[28px] 1200px:text-[36px]">BEPUL</div>
       </div>
     </div>
 
@@ -60,11 +60,11 @@
         <div class="text-[16px] 800px:text-[18px] text-[#00000099]">21-avgust</div>
       </div>
 
-      <div class="text-[24px] 800px:text-[28px] font-staatliches">20:30</div>
+      <div class="text-[24px] 800px:text-[28px]">20:30</div>
     </div>
 
     <div class="flex flex-col justify-center gap-[15px] 800px:gap-[20px] 1200px:gap-[30px] grow py-[30px]">
-      <h1 class="text-[32px] 800px:text-[36px] 1200px:text-[56px] font-staatliches leading-[1] text-center 1100px:text-left uppercase">
+      <h1 class="text-[32px] 800px:text-[36px] 1200px:text-[56px] leading-[1] text-center 1100px:text-left uppercase">
         Sog‘lom bola formulasi
       </h1>
 
@@ -92,7 +92,7 @@
       </div>
 
       <div class="flex flex-col gap-[15px] 1200px:gap-[20px]">
-        <h2 class="text-[24px] 800px:text-[28px] 1200px:text-[32px] font-[500] text-center 1100px:text-left font-staatliches uppercase">Vebinarda nimalarni o‘rganasiz:</h2>
+        <h2 class="text-[24px] 800px:text-[28px] 1200px:text-[32px] font-[500] text-center 1100px:text-left uppercase">Vebinarda nimalarni o‘rganasiz:</h2>
 
         <ul class="flex flex-col gap-[10px] 1200px:gap-[20px]">
           <li class="flex items-start gap-[12px]">
@@ -150,7 +150,7 @@
 <div class="fixed inset-[0] grid place-items-center overflow-[auto] z-[20] bg-[#0000004D] bg-opacity-[50] backdrop-blur-[5px] p-[8px] hidden"
      data-modal-backdrop data-modal-close>
   <form data-form class="w-full max-w-[520px] p-[20px] 800px:p-[40px] bg-[#fff] rounded-[8px] 1100px:rounded-[12px] relative">
-    <h2 class="text-[28px] [1100px]:text-[36px] font-staatliches leading-[1] mb-[16px]">
+    <h2 class="text-[28px] [1100px]:text-[36px] leading-[1] mb-[16px]">
       BEPUL DARSDA ISHTIROK ETISH UCHUN RO‘YXATDAN O‘TING
     </h2>
 
