--- a/b/index.html
+++ b/b/index.html
@@ -35,12 +35,12 @@
       <div
         class="flex flex-col grow py-3 800px:py-[9.5px] text-center rounded-b-[16px] 800px:rounded-b-[20px] 1200:rounded-b-[28px] shadow bg-[rgb(255,255,255)]">
         <div class="text-[12px] 800px:text-[14px] 1200px:text-[18px] text-[#00000099]">21-avgust</div>
-        <div class="text-[20px] 800px:text-[28px] 1200px:text-[36px] font-staatliches">20:30</div>
+        <div class="text-[20px] 800px:text-[28px] 1200px:text-[36px]">20:30</div>
       </div>
       <div
         class="flex flex-col grow py-3 800px:py-[9.5px] text-center rounded-b-[16px] 800px:rounded-b-[20px] 1200:rounded-b-[28px] shadow bg-[rgb(255,255,255)] opacity-0">
         <div class="text-[12px] 800px:text-[14px] 1200px:text-[18px] font-[300]">Narxi</div>
-        <div class="text-[20px] 800px:text-[28px] 1200px:text-[36px] font-staatliches">BEPUL</div>
+        <div class="text-[20px] 800px:text-[28px] 1200px:text-[36px]">BEPUL</div>
       </div>
     </div>
 
@@ -65,12 +65,12 @@
         <div class="text-[16px] 800px:text-[18px] text-[#00000099]">21-avgust</div>
       </div>
 
-      <div class="text-[24px] 800px:text-[28px] font-staatliches">20:30</div>
+      <div class="text-[24px] 800px:text-[28px]">20:30</div>
     </div>
 
     <div class="flex flex-col justify-center gap-[15px] 800px:gap-[20px] 1200px:gap-[30px] grow py-[30px]">
       <h1
-        class="px-[10px] text-[32px] 800px:text-[36px] 1200px:text-[56px] font-staatliches leading-[1] text-center 1100px:text-left uppercase">
+        class="px-[10px] text-[32px] 800px:text-[36px] 1200px:text-[56px] leading-[1] text-center 1100px:text-left uppercase">
         Sog‘lom bola formulasi
       </h1>
 
@@ -86,7 +86,7 @@
         <div class="flex">
           <div class="flex flex-col gap-[15px] 1200px:gap-[20px] px-[10px] flex-grow">
             <h2
-              class="text-[18px] 800px:text-[22px] 1200px:text-[24px] font-[500] font-staatliches uppercase leading-[1.2]">
+              class="text-[18px] 800px:text-[22px] 1200px:text-[24px] font-[500] uppercase leading-[1.2]">
               Vebinarda nimalarni o‘rganasiz:</h2>
 
             <ul class="flex flex-col gap-[10px] 1200px:gap-[20px] leading-[1.2]">
@@ -156,7 +156,7 @@
 
       <div class="hidden 1100px:flex flex-col gap-[15px] 1200px:gap-[20px] px-[10px]">
         <h2
-          class="text-[24px] 800px:text-[28px] 1200px:text-[32px] font-[500] text-center 1100px:text-left font-staatliches uppercase">
+          class="text-[24px] 800px:text-[28px] 1200px:text-[32px] font-[500] text-center 1100px:text-left uppercase">
           Vebinarda nimalarni o‘rganasiz:</h2>
 
         <ul class="flex flex-col gap-[10px] 1200px:gap-[20px]">
@@ -223,7 +223,7 @@
   data-modal-backdrop data-modal-close>
   <form data-form
         class="w-full max-w-[520px] p-[20px] 800px:p-[40px] bg-[#fff] rounded-[8px] 1100px:rounded-[12px] relative">
-    <h2 class="text-[28px] [1100px]:text-[36px] font-staatliches leading-[1] mb-[16px]">
+    <h2 class="text-[28px] [1100px]:text-[36px] leading-[1] mb-[16px]">
       BEPUL DARSDA ISHTIROK ETISH UCHUN RO‘YXATDAN O‘TING
     </h2>
 
