--- a/telegram.html
+++ b/telegram.html
@@ -5,10 +5,6 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&family=Staatliches&display=swap"
-        rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
   <title>Dr. Zebiniso Yadgarova</title>
 </head>
@@ -19,12 +15,12 @@
       <div
         class="flex flex-col grow py-3 800px:py-[9.5px] text-center rounded-b-[16px] 800px:rounded-b-[20px] 1200:rounded-b-[28px] shadow bg-[rgb(255,255,255)]">
         <div class="text-[12px] 800px:text-[14px] 1200px:text-[18px] text-[#00000099]">21-avgust</div>
-        <div class="text-[20px] 800px:text-[28px] 1200px:text-[36px] font-staatliches">20:30</div>
+        <div class="text-[20px] 800px:text-[28px] 1200px:text-[36px] font-[700]">20:30</div>
       </div>
       <div
         class="flex flex-col grow py-3 800px:py-[9.5px] text-center rounded-b-[16px] 800px:rounded-b-[20px] 1200:rounded-b-[28px] shadow bg-[rgb(255,255,255)] opacity-0">
         <div class="text-[12px] 800px:text-[14px] 1200px:text-[18px] font-[300]">Narxi</div>
-        <div class="text-[20px] 800px:text-[28px] 1200px:text-[36px] font-staatliches">BEPUL</div>
+        <div class="text-[20px] 800px:text-[28px] 1200px:text-[36px]">BEPUL</div>
       </div>
     </div>
 
@@ -49,7 +45,7 @@
         <div class="text-[16px] 800px:text-[18px] text-[#00000099]">21-avgust</div>
       </div>
 
-      <div class="text-[24px] 800px:text-[28px] font-staatliches">20:30</div>
+      <div class="text-[24px] 800px:text-[28px] font-[700]">20:30</div>
     </div>
 
     <div
@@ -92,7 +88,7 @@
       </svg>
 
 
-      <h1 class="text-[32px] 800px:text-[36px] 1200px:text-[56px] font-staatliches leading-[1]">
+      <h1 class="text-[24px] 800px:text-[36px] 1200px:text-[56px] leading-[1] font-[700]">
         VEBINARDA QATNASHISH UCHUN YOPIQ TELEGRAM KANALIMIZGA OBUNA BO‘LING
       </h1>
 
